# saffron

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/saffron-ast/: Cargo.toml
crates/saffron-ast/src/: lib.rs
crates/saffron-cli/: Cargo.toml
crates/saffron-cli/src/: main.rs
crates/saffron-codegen/: Cargo.toml
crates/saffron-codegen/src/: lib.rs
crates/saffron-lexer/: Cargo.toml
crates/saffron-lexer/src/: lib.rs
crates/saffron-parser/: Cargo.toml
crates/saffron-parser/src/: lib.rs
crates/saffron-physics/: Cargo.toml
crates/saffron-physics/src/: lib.rs
crates/saffron-semantic/: Cargo.toml
crates/saffron-semantic/src/: lib.rs
crates/saffron-sid/: Cargo.toml
crates/saffron-sid/src/: lib.rs
crates/saffron-typeck/: Cargo.toml
crates/saffron-typeck/src/: lib.rs
crates/saffron-vm/: Cargo.toml
crates/saffron-vm/src/: lib.rs
sid/data/fats/: sunflower_oil.json
sid/data/liquids/: water.json
sid/data/proteins/: chicken_breast.json  chicken_egg.json
sid/data/seasonings/: salt.json
sid/schema/: ingredient.schema.json
sid/tools/: validate.py
spec/: LANGUAGE.md  grammar.peg
tests/fixtures/invalid/type_errors/: fry_water.saffron  temp_mismatch.saffron
tests/fixtures/valid/basic/: boiled_pasta.saffron  fried_egg.saffron  grilled_steak.saffron
