[package]
name = "saffron-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Recursive descent parser for the Saffron programming language"

[dependencies]
saffron-ast = { workspace = true }
saffron-lexer = { workspace = true }
thiserror = { workspace = true }
